--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 		<h2>7:30pm - 11pm<br>
 		<a href='http://thestarongrand.com/'>The Star</a>, Oakland</h2>
-		<h2>Open Wine, Beer, and Pizza Bar from 7:30 - 8:30. Cash after.</h2>
+		<h2>Open Wine, Beer, and Pizza Bars 7:30 - 8:30. Cash after.</h2>
 		<h2><a href='https://docs.google.com/forms/d/1I2t79D87W_Pu5CNrHNjV4-yrrUPWPFsp0rFrQJGHHwk/viewform'>RSVP</a></h2>
 	</div>
 
